# lox-hobby

./: CMakeLists.txt  README.md
include/Interpreter/: Lexer.h  Scanner.h  Tokens.h
src/: CMakeLists.txt  main.cpp
src/Interpreter/: AST.hpp  CMakeLists.txt  ErrorHandling.cpp  ErrorHandling.hpp  ExprTests.cpp  Interpreter.cpp  Interpreter.hpp  Lexer.cpp  Parser.cpp  Parser.hpp  Scanner.cpp  Scanner.h  Scanner.hpp  Tokens.cpp  Tokens.hpp
src/ast_tool/: CMakeLists.txt
src/tools/: ast_tool.cpp
